Revision history for Perl extension Bitcoin::Crypto.

1.001 Thu Sep 9 15:00:00 2021
	- prefer GMP to LTM backend in Math::BigInt

1.000 Sun Sep 5 11:00:00 2021
	- end of the beta phase
	- imported mnemonics must now be proper unicode strings (important for non-english mnemonics)
	- module will now use Crypt::Perl when available to produce deterministic signatures
	- add Bitcoin::Crypto::Util::mnemonic_to_seed function
	- set_compressed method on keys now properly handles undefined values
	- code refactors and documentation improvements

0.997 Fri Jun 11 00:00:00 2021
	- implement BIP44 derivation paths
	- add derive_key_bip44 helper to extended private key class
	- remove previously deprecated Exception::KeySign
	- refactor testing out of examples
	- minor documentation improvements
	- fix distribution metadata
	- change how internal constants are handled

0.996 Thu Jan 7 23:00:00 2021
	- deprecate Exception::KeySign in favor of Exception::Sign
	- add Exception::Verify, trapping CryptX exceptions during signature verification
	- replace Throwable dependency with custom error class
	- add explicit version number to each of module's files
	- improve bytestring checking - now throws exceptions for undefs and refs
	- improve error trapping - now properly executes eval
	- improve documentation
	- improved test suite (now covers some edge cases)

0.995 Wed Sep 16 18:00:00 2020
	- downgrade and fix dependencies
	- fix minimum perl version
	- improve documentation
	- explicitly document beta version

0.994 Sun Sep 06 22:00:00 2020
	- remove Math::EllipticCurve::Prime dependency - replaced with custom function
	- remove Math::BigInt::GMP dependency - replaced with LTM
	- replace most of Base58 module internals with CryptX, leave the module for Base58Check
	- remove base58_preserve functions - standard Base58 encoding decoding now preserves null bytes
	- replace type checks with Type::Tiny
	- add mnemonic_from_entropy method to Bitcoin::Crypto::Key::ExtPrivate